@@ -5,6 +5,7 @@ Revision history for {{$dist->name}}
 - Add in 'command_pre' and 'command_post' configuration options
 - Fix 'Add Host' menu error finding 'resolved_names'
 - Ensure lib path is added to range tests to find the libraries
+- Mark permission test as TODO as it appears to be inconsistent
 
 4.14 2019-08-21 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Include README within the repository, not just created tar.gz files
